css/style.css
html{height:100%}
body{height:100%;font-size:1.5em;font-family:"Source Sans Pro",Helvetica,sans-serif;font-weight:300;line-height:1.5em;color:#16161d;background-color:#fcfcfc;text-rendering:optimizeLegibility;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
iframe{width:100%;height:100%;position:absolute}
p object,p embed{min-width:480px;min-height:320px;width:100%;height:auto}
article{padding-top:3em !important;padding-bottom:3em !important}
blockquote{position:relative;border-left:.5em solid #ff584c;margin-top:1.5em;margin-bottom:1.5em;margin-left:0;color:#808080}
blockquote p{margin-left:1.5em}
a{color:#ff584c;transition-property:color;-webkit-transition-property:color;-moz-transition-property:color;-o-transition-property:color;transition-duration:.5s;-webkit-transition-duration:.5s;-moz-transition-duration:.5s;-o-transition-duration:.5s}
a:visited{color:#bf4942}
a:hover{color:#ff8e94}
::selection{background:#ff584c;color:#fcfcfc}
.slogan{color:#808080}
header{margin-top:.667em;margin-bottom:1.5em}
footer{height:5em;margin-top:3em;background-color:#16161d;border-top:10px solid #ff584c;color:#fcfcfc;position:relative}
p{margin:0;padding:0}
p + p{margin-top:1.5em}
p.index-paragraph + p.index-paragraph{margin-top:.5em}
pre{margin-top:1.5em;margin-bottom:1.5em;font-family:"Source Code Pro",monospace !important;font-size:.667em;color:#808080;line-height:1em}
ul,ol{margin-top:1.5em;margin-bottom:1.5em;margin-left:1.5em}
li + li{margin-top:.5em}
hr{margin:1.5em}
b,strong{font-weight:bold}
figure{margin-top:1.5em;margin-bottom:1.5em}
figcaption{color:#808080;font-size:.667em;text-align:center}
img{width:100%;vertical-align:middle;border-radius:8px}
.row{max-width:1140px;margin:0 auto;overflow:visible}
.viewport{min-height:100%}
body > div.row{padding:0 1em}
footer > div.row{margin-top:1em}
div#header{font-size:1em;line-height:1.5em}
div.social,div.navigation{text-align:center;line-height:1.5em;font-size:.667em}
.centered{text-align:center}
.paginate{padding-top:3em}
.page_number{margin-left:1.5em;margin-right:1.5em}
div.content{max-width:760px;margin:0 auto;padding:1em}
div.article-content > h1{font-weight:lighter;font-size:1.5em}
div.embed{margin:1.5em auto;padding-bottom:60%;position:relative;width:100%}
ul{list-style-type:circle}
div.article-date{color:#808080;text-align:center;font-size:.667em}
div.article-metadata{padding-bottom:1.5em}
h1.article-title{border-bottom:3px solid #16161d;font-size:2.25em;line-height:1.5em;margin:0;text-align:center}
div.CodeRay{margin:1.5em 0;background-color:#fff;border:1px solid #16161d;border-radius:.5em}
span.line-numbers{margin:0 .5em}
@media ( min-width: 1200px ){img,div.CodeRay,div.article-metadata{width:150%;position:relative;left:-25%}
div.embed{width:150%;position:relative;left:-25%;padding-bottom:75%}
blockquote{left:-2em}
}@media ( max-width: 600px ){body{font-size:1.25em}
ul,ol{margin:0;padding-left:1em}
div.content{padding:.5em}
blockquote > p{margin-left:.5em}
blockquote{margin-right:0}
}@media ( max-width: 480px ){h1.article-title{font-size:1.5em}
}

